--- a/backend/myapp/src/main/resources/application.properties
+++ b/backend/myapp/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=myapp
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=mydatabase
+file.upload-dir=src/main/resources/static/uploads
