--- a/backend/myapp/src/main/resources/application.properties
+++ b/backend/myapp/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=myapp
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=mydatabase
+
+cloud.aws.credentials.accessKey=${AWS_ACCESS_KEY_ID}
+cloud.aws.credentials.secretKey=${AWS_SECRET_ACCESS_KEY}
+cloud.aws.region.static=${AWS_REGION}
